[package]
name = "wolrdgen-voxels"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = "0.38.0"
ash-window = "0.13.0"
bevy_app = "0.16.1"
bevy_ecs = "0.16.1"
itertools = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
winit = { version = "0.30.11", features = ["rwh_06"] }
raw-window-handle = "0.6.0"
